--- a/FashionStore/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/FashionStore/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -134,6 +134,26 @@
                                     <div data-i18n="Without menu">Sản phẩm</div>
                                 </a>
                             </li>
+                            <li class="menu-item">
+                                <a href="@Url.Action("Index", "Account")" class="menu-link">
+                                    <div data-i18n="Without menu">Tài Khoản</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="@Url.Action("Index", "Account")" class="menu-link">
+                                    <div data-i18n="Without menu">Khách Hàng</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="@Url.Action("Index", "Account")" class="menu-link">
+                                    <div data-i18n="Without menu">Hình Thức Thanh Toán</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="@Url.Action("Index", "Account")" class="menu-link">
+                                    <div data-i18n="Without menu">Hóa Đơn</div>
+                                </a>
+                            </li>
                         </ul>
                     </li>
 
