--- a/FashionStore/Areas/Admin/Views/Account/Index.cshtml
+++ b/FashionStore/Areas/Admin/Views/Account/Index.cshtml
@@ -31,8 +31,7 @@
                             <td class="text-center">@item.TenTK</td>
                             <td class="text-center">@item.MatKhau</td>
                             <td class="text-center">
-                                <a href="@Url.Action("Details", "Product", new {id = item.TenTK})" class="btn btn-sm btn-primary text-white"><i class="fa-solid fa-eye"></i></a>
-                                <a href="@Url.Action("Update", "Product", new {id = item.TenTK})" class="btn btn-sm btn-warning text-white"><i class="fa-solid fa-pen-to-square"></i></a>
+                                <a href="@Url.Action("Update", "Account", new {tentaikhoan = item.TenTK})" class="btn btn-sm btn-warning text-white"><i class="fa-solid fa-pen-to-square"></i></a>
                                 <a data-id="@item.TenTK" class="btn btn-sm btn-danger text-white btn-delete"><i class="fa-solid fa-trash"></i></a>
                             </td>
                         </tr>
@@ -48,7 +47,7 @@
         $(".btn-delete").on('click', function () {
             let id = $(this).attr("data-id");
             if (confirm("Bạn có chắc chắn muốn xóa sản phẩm với id: " + id)) {
-                window.location.href = '/Admin/Product/Delete?id=' + id;
+                window.location.href = '/Admin/Account/Delete?tentaikhoan=' + id;
             }
         })
     </script>
