--- a/FashionStore/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/FashionStore/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -151,15 +151,11 @@
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a href="@Url.Action("Index", "Account")" class="menu-link">
+                                <a href="@Url.Action("Index", "HoaDon")" class="menu-link">
                                     <div data-i18n="Without menu">Hóa Đơn</div>
                                 </a>
                             </li>
                         </ul>
-                        <a href="javascript:void(1);" class="menu-link menu-toggle">
-                            <i class="menu-icon tf-icons bx bxs-user-account"></i>
-                            <div data-i18n="Layouts">Cấu hình tài khoản</div>
-                        </a>
                     </li>
 
                 </ul>
@@ -253,7 +249,7 @@
                                 <script>
                     document.write(new Date().getFullYear());
                                 </script>
-                                , made with ❤️ by Fruit Team
+                                , made with Nhóm 15 - LT WEB
                             </div>
                             
                         </div>
