--- a/FashionStore/Views/Home/Index.cshtml
+++ b/FashionStore/Views/Home/Index.cshtml
@@ -3,6 +3,15 @@
     ViewBag.Title = "Index";
     Layout = "/Views/Shared/_Layout.cshtml";
 }
+<div style="text-align:end; padding-right:200px">
+
+    @if (Session["KhachHang"] != null)
+    {
+        <p>
+            @(((FashionStore.Models.KhachHang)Session["KhachHang"]).TenKH)
+        </p>
+    }
+</div>
 <!-- Categories Section Begin -->
 <section class="categories">
     <div class="container">
@@ -55,7 +64,7 @@
                     <div class="featured__item">
                         <div class="featured__item__pic set-bg" data-setbg="/Content/images/@item.Hinh">
                             <ul class="featured__item__pic__hover">
-                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                                <li><a href="@Url.Action("AddToCart", "Home", new {id = item.MaSP, quantity = 1})"><i class="fa fa-shopping-cart"></i></a></li>
                             </ul>
                         </div>
                         <div class="featured__item__text">
