--- a/FashionStore/Views/Shared/_Layout.cshtml
+++ b/FashionStore/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     <div class="humberger__menu__overlay"></div>
     <div class="humberger__menu__wrapper">
         <div class="humberger__menu__logo">
-            <a href="#"><img src="/Public/assetsCustomer/img/logo.png" alt=""></a>
+            <a href="@Url.Action("Index","Home")"><img src="/Public/assetsCustomer/img/logo.png" alt=""></a>
         </div>
         <div class="humberger__menu__cart">
             <ul>
@@ -116,23 +116,14 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="/Public/assetsCustomer/img/logo.png" alt=""></a>
+                        <a href="./index"><img src="/Public/assetsCustomer/img/logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-8">
                     <nav class="header__menu">
                         <ul>
-                            <li class="active"><a href="./index.html">Trang chủ</a></li>
+                            <li class="active"><a href="./index">Trang chủ</a></li>
                             <li><a href="./shop-grid.html">Cửa hàng</a></li>
-                            <li>
-                                <a href="#">Trang</a>
-                                <ul class="header__menu__dropdown">
-                                    <li><a href="./shop-details.html">Shop Details</a></li>
-                                    <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                                    <li><a href="./checkout.html">Check Out</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li>
                             <li><a href="./contact.html">Liên hệ</a></li>
                         </ul>
                     </nav>
@@ -141,7 +132,7 @@
                 <div class="col-lg-1">
                     <div class="header__cart">
                         <ul>
-                            <li><a href="#"><i class="fa fa-shopping-bag"></i></a></li>
+                            <li><a href="@Url.Action("ShopingBag","Home")"><i class="fa fa-shopping-bag"></i></a></li>
                         </ul>
                     </div>
                 </div>
